# pytron-kit

./: .flake8  .gitattributes  .gitignore  .semgrepignore  ARCHITECTURE.md  MANIFEST.in  README.md  UNICODE_README.md  USAGE.md  bandit_report.json  build.py  pyproject.toml  pytest.ini  requirements.json  requirements.txt  setup.py
.agent/workflows/: compile-native.md  macos-package.md  publish.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: guardrails.yml  lint.yml  macos-package.yml  publish.yml  tests.yml  windows-package.yml
examples/: README.md
examples/01-hello-world/: README.md  app.py  settings.json
examples/01-hello-world/frontend/: index.html
examples/02-todo-app/: README.md  app.py  settings.json
examples/02-todo-app/frontend/: index.html
examples/03-file-browser/: README.md  app.py  settings.json
examples/03-file-browser/frontend/: index.html
examples/04-system-monitor/: README.md  app.py  settings.json
examples/04-system-monitor/frontend/: index.html
examples/05-database-crud/: README.md  app.py  settings.json
examples/05-database-crud/frontend/: index.html
examples/06-image-processing/: README.md  app.py  settings.json
examples/06-image-processing/frontend/: index.html
examples/07-global-shortcuts/: README.md  app.py  settings.json
examples/07-global-shortcuts/frontend/: index.html
examples/app1/: README.md
examples/chat_application/: README.md
examples/chat_application/frontend/: README.md
examples/pytron-1.01-vite-example/: app.py  settings.json
examples/pytron-1.01-vite-example/frontend/: package-lock.json
pytron/: __init__.py  application.py  bindings.py  chromewebview.py  cli.py  console.py  core.py  exceptions.py  inspector.py  menu.py  plugin.py  pyside_engine.py  router.py  serializer.py  shortcuts.py  state.py  tray.py  updater.py  utf8_hook.py  utils.py  webview.py  window.py
pytron/apputils/: chrome_ipc.py  codegen.py  config.py  deadmansswitch.py  extras.py  native.py  shell.py  windows.py
pytron/commands/: android.py  build.py  doctor.py  engine.py  frontend.py  harvest.py  helpers.py  init.py  install.py  login.py  package.py  plugin.py  run.py  scan.py  show.py  uninstall.py  utils.py  workflow.py
pytron/dependencies/: __init__.py
pytron/engines/chrome/: adapter.py  engine.py  forge.py
pytron/engines/native/: Cargo.toml  build.py
pytron/engines/native/src/: events.rs  ipc.rs  lib.rs  protocol.rs  state.rs  utils.rs  webview.rs
pytron/installer/: Installation.nsi
pytron/manifests/: windows-utf8.manifest
pytron/pack/: assets.py  compilers.py  crystal.py  graph.py  inference.py  installers.py  introspect.py  metadata.py  modules.py  nuitka.py  pipeline.py  pyinstaller.py  rust_engine.py  secure.py  utils.py  virtual_root.py
pytron/tests/: test_android_builder.py  test_android_ops.py  test_darwin_ops.py  test_linux_ops.py  test_windows_facade.py  test_windows_ops.py
tests/: demo_ml_graph.py  mojo_test.html  parity_check.js  test_android_builder.py  test_android_ops.py  test_codegen.py  test_config.py  test_darwin_ops.py  test_extras.py  test_linux_ops.py  test_native.py  test_pack_assets.py  test_pack_builds.py  test_pack_installers.py  test_pack_mandatory_resources.py  test_pack_utils.py  test_rust_ipc.py  test_secure_pack.py  test_serializer.py  test_state.py  test_windows.py  test_windows_facade.py  test_windows_ops.py
(+8 files in other folders)
