[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"
[tool.setuptools]
packages = ["pytron"]
[project]
name = "pytron-kit"
version = "0.1.6"
description = "An Electron-like library for Python using pywebview"
readme = "README.md"
requires-python = ">=3.6"
license = { text = "MIT" }
keywords = ["pywebview", "electron", "app", "desktop"]
authors = [
  { name = "Ghua8088" }
]
dependencies = [
  "pywebview",
  "pyinstaller",
  "watchgod",
  "pydantic",
  "brotli",   
  "brotlicffi",  
  "Pillow"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
pytron = "pytron.cli:main"

[tool.setuptools.package-data]
pytron = ["installer/*.nsi", "installer/*.ico", "installer/*.bmp", "nsis-setup.exe","utf8_hook.py", "manifests/*"]