[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"
[tool.setuptools]
packages = ["pytron"]

[project]
name = "pytron-kit"
version = "0.2.1"
description = "An Electron-like library for Python "
readme = "README.md"
requires-python = ">=3.6"
license = { text = "MIT" }
keywords = ["electron", "app", "desktop"]
authors = [
  { name = "Ghua8088" }
]
dependencies = [
  "pyinstaller",
  "watchgod",
  "pydantic",
  "importlib",
  "Pillow"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
pytron = "pytron.cli:main"

[tool.setuptools.package-data]
pytron = ["installer/*","nsis-setup.exe","utf8_hook.py", "manifests/*","dependancies/*"]